beryllium: overlay: Enable burn in protection
Change-Id: I677381b4e8d8fce1d9d5df662512debdf7ebf434

--- a/overlay/BerylliumFrameworksOverlay/res/values/config.xml
+++ b/overlay/BerylliumFrameworksOverlay/res/values/config.xml
@@ -963,4 +963,7 @@
         <item>2</item> <!-- COLOR_MODE_SATURATED -->
         <item>3</item> <!-- COLOR_MODE_AUTOMATIC -->
     </integer-array>
+
+    <!-- If true, the display will be shifted around in ambient mode. -->
+    <bool name="config_enableBurnInProtection">true</bool>
 </resources>
